Readability improvements, tweak to building_a_controller Tutorial
General readability and grammar improvements.
Tutorial building_a_controller had errors that have been fixed.

--- a/tutorials/building_a_controller.ipynb
+++ b/tutorials/building_a_controller.ipynb
@@ -54,15 +54,14 @@
    "outputs": [],
    "source": [
     "import pandapower as pp\n",
-    "import control\n",
     "import pandas as pd\n",
-    "import timeseries as ts\n",
+    "import pandapower.timeseries as ts\n",
     "\n",
     "# importing a grid from the library\n",
     "from pandapower.networks import mv_oberrhein\n",
     "\n",
     "\n",
-    "class Storage(control.basic_controller.Controller):\n",
+    "class Storage(pp.control.basic_controller.Controller):\n",
     "    \"\"\"\n",
     "        Example class of a Storage-Controller. Models an abstract energy storage.\n",
     "    \"\"\"\n",
