--- a/tutorials/control_loop.ipynb
+++ b/tutorials/control_loop.ipynb
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The voltage at transformer 114 is now within the given range. If we checke the transformer table, we can see that the tap position of the first transformer as been changed from -2 to -1:"
+        "The voltage at transformer 114 is now within the given range. If we check the transformer table, we can see that the tap position of the first transformer as been changed from -2 to -1:"
    ]
   },
   {
